<resources>
    <string name="app_name">Rides</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fetch_button">Fetch</string>
    <string name="previous">Previous</string>

    <string name="retrieve_qty">Quantity to retrieve</string>
    <string name="vin_label">Vin</string>
    <string name="make_label">Make</string>

    <string name="vin_colon">Vin : </string>
    <string name="make_colon">Make : </string>
    <string name="color_colon">Color : </string>
    <string name="type_colon">Type : </string>
    <string name="sort_by_make">Sort By Make</string>

    <string name="button_ok">Ok</string>
    <string name="carbon_emission">Carbon Emissions</string>
    <string name="ce_unit">Units</string>


</resources>